welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:3: error: reassignment to val
	case (a,b) if (a=10) => {return true}
                        ^makes10:4: error: reassignment to val
	case (a,b) if (b=10) => {return true}
                        ^makes10:5: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	case (a,b) if (a+b=10) => {return true}
                        ^